# seasonXI

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.claude/: launch.json  settings.local.json
configs/: card_schema.json  competitions.yml  formula_v1.yml  league_strength.yml  role_mapping.yml  suno_prompts.txt  tier_thresholds.yml
configs/image_prompts/: base_prompt.txt  midjourney_guide.md  modifiers.txt  player_blocks.txt  player_card_prompt.txt  player_main_prompt.txt  scene_blocks.txt  season_moods.txt
configs/narration_scripts/: benzema_2021_22.txt  lewandowski_2021_22.txt  salah_2021_22.txt
configs/prompt_logs/: messi_2011_12_card.md  messi_2011_12_hook.md
data/cards/: messi_2011-12.json  ronaldo_2016-17.json  son_2021-22.json
data/raw/: README.md  seed_players.csv  seed_teams.csv
frontend/: Dockerfile  package-lock.json  package.json
outputs/cards/: _all_cards_v2_merged.json  _all_cards_v3_multiseason.json
remotion/: Dockerfile  package-lock.json  package.json  render-server.js
remotion/src/: Root.tsx  SeasonCard.tsx  SeasonStory.tsx  types.ts
scripts/: browser_scraper.js  convert_raw_to_csv.py  deep_review.py  engine_diagnostic.py  engine_performance_check.py  fetch_and_run.py  fetch_fbref_slow.py  fetch_understat.py  fetch_understat_2023_24.py  full_audit.py  generate_card.py  improvement_check.py  merge_and_run.py  render_video.py  run_real_pipeline.py  scout_review.py  scrape_fbref.py  scrape_via_cdp.py
tests/: conftest.py  test_archetypes.py  test_formula.py  test_position_classifier.py
(+151 files in other folders)
