[project]
name = "seasonxi"
version = "0.1.0"
description = "HANESIS football season card engine — One season. One version. One legend."
readme = "README.md"
requires-python = ">=3.11,<3.14"
license = {text = "MIT"}
authors = [{name = "SeasonXI", email = "stormcredit0725@gmail.com"}]

dependencies = [
    "pandas>=2.2",
    "polars>=1.0",
    "duckdb>=1.1",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "pyyaml>=6.0",
    "pyarrow>=17.0",
    "soccerdata>=1.8",
    "understatapi>=0.3",
    "httpx>=0.27",
    "thefuzz[speedup]>=0.22",
    "unidecode>=1.3",
    "rich>=13.0",
    "loguru>=0.7",
    "playwright>=1.58.0",
    "fastapi>=0.135.2",
    "uvicorn>=0.42.0",
    "google-genai>=1.69.0",
    "python-dotenv>=1.2.2",
    "pillow>=12.1.1",
    "python-multipart>=0.0.22",
    "google-api-python-client>=2.193.0",
    "google-auth-oauthlib>=1.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "mypy>=1.11",
    "ipykernel>=6.29",
    "jupyterlab>=4.2",
    "matplotlib>=3.9",
    "seaborn>=0.13",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/seasonxi"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.mypy]
python_version = "3.11"
plugins = ["pydantic.mypy"]
strict = true
